@@ -356,29 +356,29 @@
 /* *** animation speed constants *** */
 
 /* icon slide */
-#define ICON_SLIDE_SLOWDOWN_UF	20
+#define ICON_SLIDE_SLOWDOWN_UF	1
 #define ICON_SLIDE_DELAY_UF	0
-#define ICON_SLIDE_STEPS_UF	15
+#define ICON_SLIDE_STEPS_UF	50
 
-#define ICON_SLIDE_SLOWDOWN_F	30
+#define ICON_SLIDE_SLOWDOWN_F	3
 #define ICON_SLIDE_DELAY_F	0
-#define ICON_SLIDE_STEPS_F	10
+#define ICON_SLIDE_STEPS_F	50
 
-#define ICON_SLIDE_SLOWDOWN_M	40
+#define ICON_SLIDE_SLOWDOWN_M	5
 #define ICON_SLIDE_DELAY_M	0
-#define ICON_SLIDE_STEPS_M	5
+#define ICON_SLIDE_STEPS_M	30
 
-#define ICON_SLIDE_SLOWDOWN_S	50
+#define ICON_SLIDE_SLOWDOWN_S	10
 #define ICON_SLIDE_DELAY_S	0
-#define ICON_SLIDE_STEPS_S	3
+#define ICON_SLIDE_STEPS_S	20
 
-#define ICON_SLIDE_SLOWDOWN_U	50
-#define ICON_SLIDE_DELAY_U	3
-#define ICON_SLIDE_STEPS_U	3
+#define ICON_SLIDE_SLOWDOWN_US	20
+#define ICON_SLIDE_DELAY_US	1
+#define ICON_SLIDE_STEPS_US	10
 
 /* menu scrolling */
 #define MENU_SCROLL_STEPS_UF	14
-#define MENU_SCROLL_DELAY_UF	0
+#define MENU_SCROLL_DELAY_UF	1
 
 #define MENU_SCROLL_STEPS_F	10
 #define MENU_SCROLL_DELAY_F	5
@@ -389,8 +389,8 @@
 #define MENU_SCROLL_STEPS_S	4
 #define MENU_SCROLL_DELAY_S	6
 
-#define MENU_SCROLL_STEPS_U	1
-#define MENU_SCROLL_DELAY_U	8
+#define MENU_SCROLL_STEPS_US	1
+#define MENU_SCROLL_DELAY_US	8
 
 
 /* shade animation */
@@ -406,8 +406,8 @@
 #define SHADE_STEPS_S		30
 #define SHADE_DELAY_S		0
 
-#define SHADE_STEPS_U		20
-#define SHADE_DELAY_U		10
+#define SHADE_STEPS_US		40
+#define SHADE_DELAY_US		10
 
 
 /* workspace name on switch display */
